[gd_scene load_steps=6 format=3 uid="uid://cucsqn0d8brf5"]

[ext_resource type="Script" path="res://scenes/ui/action_menu/build_menu.gd" id="1_6cb6a"]
[ext_resource type="Texture2D" uid="uid://d2jyvul8auyhf" path="res://assets/crops/items/wheat.png" id="1_gub6y"]
[ext_resource type="Texture2D" uid="uid://cg4tde0hdixfv" path="res://assets/crops/items/beet.png" id="2_smwp6"]
[ext_resource type="Texture2D" uid="uid://fnu0kcdrtox0" path="res://assets/crops/items/lettuce.png" id="3_b0g4x"]
[ext_resource type="Texture2D" uid="uid://cn4xhcag4041o" path="res://assets/crops/items/carrot.png" id="4_52wox"]

[node name="BuildMenu" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_6cb6a")

[node name="BuildMenuOpen" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = -52.0
offset_right = 36.0
offset_bottom = 134.0

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BuildMenuOpen/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CloseBuildMenuButton" type="Button" parent="BuildMenuOpen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Close"

[node name="GridContainer" type="GridContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Wheat" type="PanelContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Wheat"]
layout_mode = 2

[node name="WheatButton" type="TextureButton" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Wheat/MarginContainer"]
layout_mode = 2
tooltip_text = "wheat"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_gub6y")

[node name="Beet" type="PanelContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Beet"]
layout_mode = 2

[node name="BeetButton" type="TextureButton" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Beet/MarginContainer"]
layout_mode = 2
tooltip_text = "beet"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_smwp6")

[node name="Lettuce" type="PanelContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Lettuce"]
layout_mode = 2

[node name="LettuceButton" type="TextureButton" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Lettuce/MarginContainer"]
layout_mode = 2
tooltip_text = "lettuce"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_b0g4x")

[node name="Carrot" type="PanelContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Carrot"]
layout_mode = 2

[node name="CarrotButton" type="TextureButton" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Carrot/MarginContainer"]
layout_mode = 2
tooltip_text = "carrot"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_52wox")

[node name="BuildMenuClosed" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
offset_left = 26.0
offset_right = 42.0
offset_bottom = 22.0

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuClosed"]
layout_mode = 2

[node name="OpenBuildMenuButton" type="Button" parent="BuildMenuClosed/MarginContainer"]
layout_mode = 2
text = "<"

[connection signal="pressed" from="BuildMenuOpen/MarginContainer/VBoxContainer/HBoxContainer/CloseBuildMenuButton" to="." method="_on_close_build_menu_button_pressed"]
[connection signal="pressed" from="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Beet/MarginContainer/BeetButton" to="." method="_on_beet_button_pressed"]
[connection signal="pressed" from="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Lettuce/MarginContainer/LettuceButton" to="." method="_on_lettuce_button_pressed"]
[connection signal="pressed" from="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Carrot/MarginContainer/CarrotButton" to="." method="_on_carrot_button_pressed"]
[connection signal="pressed" from="BuildMenuClosed/MarginContainer/OpenBuildMenuButton" to="." method="_on_open_build_menu_button_pressed"]
